<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:text="@string/category_device" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer" />

    <TextView
        android:id="@+id/text_manufacturer"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brand" />

    <TextView
        android:id="@+id/text_brand"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model" />

    <TextView
        android:id="@+id/text_model"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product" />

    <TextView
        android:id="@+id/text_product"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/design" />

    <TextView
        android:id="@+id/text_design"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/board" />

    <TextView
        android:id="@+id/text_board"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardware" />

    <TextView
        android:id="@+id/text_hardware"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serial_number" />

    <TextView
        android:id="@+id/text_serial_number"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction_set" />

    <TextView
        android:id="@+id/text_instruction_set"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>
</merge>
