<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_span="2"
        android:text="@string/category_display" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resolution_px" />

    <TextView
        android:id="@+id/text_resolution_px"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resolution_dp" />

    <TextView
        android:id="@+id/text_resolution_dp"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resolution_usable" />

    <TextView
        android:id="@+id/text_resolution_usable"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smallest_width" />

    <TextView
        android:id="@+id/text_min_width"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/density" />

    <TextView
        android:id="@+id/text_density"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dpi" />

    <TextView
        android:id="@+id/text_dpi"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size_qualifier" />

    <TextView
        android:id="@+id/text_size_qualifier"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orientation" />

    <TextView
        android:id="@+id/text_orientation"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>
</merge>
