<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:text="@string/category_imsi" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imsi" />

    <TextView
        android:id="@+id/text_imsi"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mcc" />

    <TextView
        android:id="@+id/text_mcc"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mnc" />

    <TextView
        android:id="@+id/text_mnc"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>
</merge>
