<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:text="@string/category_connectivity" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telephony" />

    <TextView
        android:id="@+id/text_telephony"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connections" />

    <TextView
        android:id="@+id/text_connections"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_interfaces" />

    <TextView
        android:id="@+id/text_network_interfaces"
        style="@style/Widget.Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
  </TableRow>
</merge>
