<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_cpu"
        android:layout_span="2"
        style="@style/Widget.Category"
        />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu_type"
        style="@style/Widget.Label"
        />

    <TextView
        android:id="@+id/cpu_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        style="@style/Widget.Value"
        />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cores"
        style="@style/Widget.Label"
        />

    <TextView
        android:id="@+id/cpu_cores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        style="@style/Widget.Value"
        />
  </TableRow>

  <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/features"
        style="@style/Widget.Label"
        />

    <TextView
        android:id="@+id/cpu_features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        style="@style/Widget.Value"
        />
  </TableRow>
</merge>
