<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_navigation_and_keyboard"
                android:layout_span="2"
                style="@style/Widget.Category"
                />
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/touchscreen"
                style="@style/Widget.Label"
                />
        <TextView
                android:id="@+id/text_touchscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                style="@style/Widget.Value"
                />
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_type"
                style="@style/Widget.Label"
                />
        <TextView
                android:id="@+id/text_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                style="@style/Widget.Value"
                />
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keyboard"
                style="@style/Widget.Label"
                />
        <TextView
                android:id="@+id/text_keyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                style="@style/Widget.Value"
                />
    </TableRow>
</merge>
