<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_user_preferences"
                android:layout_span="2"
                style="@style/Widget.Category"
                />
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locale"
                style="@style/Widget.Label"
                />
        <TextView
                android:id="@+id/text_locale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                style="@style/Widget.Value"
                />
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/font_scale"
                style="@style/Widget.Label"
                />
        <TextView
                android:id="@+id/text_font_scale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                style="@style/Widget.Value"
                />
    </TableRow>
</merge>
